# myos

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.devcontainer/: devcontainer.json
api/file-io/: Cargo.toml
api/file-io/src/: error.rs  lib.rs
api/io/: Cargo.toml
api/io/src/: cursor.rs  error.rs  lib.rs
api/myos-api/: Cargo.toml
api/myos-api/src/: lib.rs
api/myos-api/src/filesystem/: error.rs  mod.rs
api/myos-api/src/io/: cursor.rs  error.rs  mod.rs
api/myos-api/src/time/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
crates/pc-screen-font/: Cargo.toml
crates/pc-screen-font/src/: lib.rs
drivers/framebuffer/: Cargo.toml
drivers/framebuffer/resources/test/console/: hello_world.ppm
drivers/framebuffer/src/: console.rs  lib.rs
drivers/pci/: Cargo.toml
drivers/pci/src/: lib.rs  x86.rs
drivers/pci/src/types/: mod.rs
drivers/serial-port/: Cargo.toml
drivers/serial-port/src/: error.rs  lib.rs  port.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  console.rs  main.rs  memory.rs  pci.rs
kernel/src/drivers/framebuffer/: font.rs  mod.rs
kernel/src/pci/: mod.rs  x86.rs
scripts/: Dockerfile.cross-compiler  build-docker.sh  build.sh  debug.sh  docker-build-cross-compiler.sh  precommit.sh  run-cross-compiler.sh  run-in-docker.sh  run.sh
src/: boot.s  bootsect.asm  kernel.c  main.rs
testing/font/: Cargo.toml  font.rs
testing/font/src/: default8x16.psfu  font.rs  main.rs
utils/allocator/: Cargo.toml
utils/allocator/src/: bump_allocator.rs  lib.rs  linked_list_allocator.rs  locked_allocator.rs  slab_allocator.rs  test_allocator.rs
utils/ansi-escape/: Cargo.toml
utils/ansi-escape/scripts/: generate_colors.py
utils/ansi-escape/src/: codes.rs  colors.rs  lib.rs
utils/chartoi/: Cargo.toml
utils/chartoi/src/: lib.rs
utils/ext4/: Cargo.toml  README.md  sudo
utils/ext4/scripts/: create-test-data.sh
utils/ext4/src/: directory.rs  lib.rs  source.rs  super_block.rs  utils.rs
utils/ext4/src/types/: bitmap.rs  block_group_descriptor.rs  directory_entry.rs  extent.rs  inode.rs  mod.rs  super_block.rs
utils/nostdio/: Cargo.toml
utils/nostdio/src/: cursor.rs  lib.rs  offset.rs
utils/pc-screen-font/: Cargo.toml
utils/pc-screen-font/src/: lib.rs
utils/pc-screen-font/src/resources/test/: Tamsyn8x16b.notable.psf2  Tamsyn8x16b.psf1
utils/pci/: Cargo.toml
utils/pci/src/: lib.rs
utils/vsfs/: Cargo.toml
utils/vsfs.old/: directory.rs  file.rs  format.rs  inode.rs  lib.rs  physical.rs
utils/vsfs/src/: directory.rs  error.rs  file.rs  format.rs  inode.rs  io.rs  layout.rs  lib.rs  physical.rs  utils.rs
