[package]
name = "myos"
version = "0.1.0"
edition = "2024"
default-run = "myos"

[workspace]
members = [
    "common",
    "drivers/framebuffer",
    "drivers/serial-port",
    "kernel", "utils/ansi-escape",
    "utils/pc-screen-font",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bootloader_api = "0.11.10"
conquer-once = { version = "0.4.0", default-features = false }
spin = "0.10.0"
x86 = "0.52.0"

[dependencies]
ovmf-prebuilt = "0.2.3"

[build-dependencies]
# kernel = { path = "./kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"
