[package]
name = "myos"
version = "0.1.0"
edition = "2024"
default-run = "myos"

[workspace]
members = [
    "common",
    "drivers/framebuffer",
    "drivers/pci",
    "drivers/serial-port",
    "kernel",
    "utils/allocator",
    "utils/ansi-escape",
    "utils/pc-screen-font",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bootloader_api = "0.11.10"
conquer-once = { version = "0.4.0", default-features = false }
spin = "0.10.0"
x86 = "0.52.0"
x86_64 = "0.15.2"
heapless = "0.8.0"
zune-core = "0.4.12"
zune-ppm = "0.4.0"
zerocopy = { version = "0.8.26", features = ["derive"] }
assert_hex = "0.4.1"
bit_field = "0.10.2"
fatfs = { version = "0.3.6", features = ["core_io"], default-features = false }
core_io = "0.1.20210325"
no_std_io = { version = "0.6.0", default-features = false }

[dependencies]
ovmf-prebuilt = "0.2.3"

[build-dependencies]
kernel = { path = "./kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"
fatfs = "0.3.6"
anyhow = "1.0.98"
