[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = { workspace = true }
conquer-once = { workspace = true }
pc-screen-font = { path = "../utils/pc-screen-font" }
framebuffer = { path = "../drivers/framebuffer" }
serial-port = { path = "../drivers/serial-port" }
common = { path = "../common" }
spin = { workspace = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
