[package]
name = "kernel"
edition.workspace = true
version.workspace = true

[dependencies]
bootloader_api = { workspace = true }
conquer-once = { workspace = true }
pc-screen-font = { path = "../utils/pc-screen-font" }
ansi-escape = { path = "../utils/ansi-escape" }
framebuffer = { path = "../drivers/framebuffer" }
serial-port = { path = "../drivers/serial-port" }
common = { path = "../common" }
spin = { workspace = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
