[package]
name = "kernel"
edition.workspace = true
version.workspace = true

[dependencies]
bootloader_api = { workspace = true }
conquer-once = { workspace = true }
pc-screen-font = { path = "../utils/pc-screen-font" }
ansi-escape = { path = "../utils/ansi-escape" }
allocator = { path = "../utils/allocator" }
vsfs = { path = "../utils/vsfs" }
pci = { path = "../drivers/pci" }
framebuffer = { path = "../drivers/framebuffer" }
serial-port = { path = "../drivers/serial-port" }
common = { path = "../common" }
spin = { workspace = true }
x86_64 = { workspace = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
