[package]
name = "framebuffer"
edition.workspace = true
version.workspace = true

[dependencies]
common = { path = "../../common" }
pc-screen-font = { path = "../../utils/pc-screen-font" }
ansi-escape = { path = "../../utils/ansi-escape" }
spin = { workspace = true }

[dev-dependencies]
zune-core = { workspace = true }
zune-ppm = { workspace = true }
