[package]
name = "ext4"
edition.workspace = true
version.workspace = true

[dependencies]
zerocopy = { workspace = true }
myos-api = { path = "../../api/myos-api" }
io = { path = "../../api/io" }
file-io = { path = "../../api/file-io" }
spin = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bitflags = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
io = { path = "../../api/io", features = ["std"] }

[features]
std = []
