[package]
name = "ext4"
edition.workspace = true
version.workspace = true

[dependencies]
zerocopy = { workspace = true }
spin = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bitflags = { workspace = true }
heapless = { workspace = true }
myos-api = { path = "../../api/myos-api", default-features = false, optional = true }

[dev-dependencies]
myos-api = { path = "../../api/myos-api", features = ["std"] }

[features]
default = ["myos-api"]
std = ["myos-api?/std"]
